
20040801: Changed the method of entering/editing CUS rules in FormulaEdit:: to use a dialog
          for each function in order to keep correct grammer. The user has to use the dialog
	  now instead of entering functions by hand. Hopefully we can remove all the potential
	  user errors so I don't have to code error checking for every parm. sigh.....


0.26
====

20040221: Added new BarData class to libqtstalker. Plot and all plugins were modified to handle the new
          input bar interface. This structural change in preparation for future design changes.

20040222: Added a small current close arrow pointer to the scale area of the main plot. Helps with
          tracking where the last close is located on the scale.
	  
20040224: Moved chart object logic out of Plot:: and split each chart object off into it's own
          class. Moving towards a proper OO framework.

20040228: Moved PlotLine line type logic out of Plot:: and into PlotLine::
          Moving towards a proper OO framework.
	  
20040228: Moved chart type logic out of Plot:: and split each chart type off into it's own
          plugin. We now have chart plugins. Chart plugins now have their own pref dialogs
	  to handle colors and any parms that are specific to that chart style.
	  
20040228: Added new option to MACD plugin. Option controls the osc scaling. True turns on full
          scaling and false reverts to normal scaling.
	  
20040302: Yehaaww! Drag and drop chart objects are working. Needs some polishing and tweaking
          here and there still. But it works. This is a big step forward in usability. Overhauled
	  the Fibonacci and trendlines. 

20040303: Applied patch #909286 - thin and fat candles. Added an option to turn this feature on
          and off to compliment it. Thanks to Dany Daw.
	  
20040303: Applied patch #903981 - new doc explain cvs, development, contribution. Thanks to
          David Crossley.
	  